# student_monitoring_2.0

./: .env.example  .gitignore  build.sh  datadump.json  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  render.yaml  requirements.txt  vercel.json
achievements/: views.py
api/: asgi.py  settings.py  wsgi.py
loginsite/: urls.py  views.py
loginsite/static/loginsite/: style.css
loginsite/templates/loginsite/: layout.html  login.html
student_monitoring/: asgi.py  settings.py  urls.py  wsgi.py
studentsite/: models.py  urls.py  views.py
studentsite/migrations/: 0001_initial.py  0002_remove_score_computer_assingment_marks_and_more.py  0003_alter_student_profile_pic.py
studentsite/static/studentsite/: script.js  style.css
studentsite/templates/studentsite/: analytics.html  home.html  layout.html  remark.html  scores.html
