[tool.poetry]
name = "student-monitoring"
version = "0.1.0"
description = "A django application for monitoring student progress"
authors = ["Jay9874 <jayprakashsharma225@gmail.com>"]
readme = "README.md"
packages = [{include = "student_monitoring"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
